--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "contributors": [
     "Keyvan Mahmoodzadeh Kani",
     "MD Islam",
-    "Johnny Vu",
+    "Johny Vu",
     "Sanskar Thapa",
     "Jorge Arias",
     "Anthony Gonzalez"
